fixed word wrap overflow and fixed login / register issue

--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -66,6 +66,7 @@
 
 .messages {
 	margin-left: 5px;
+	overflow-wrap: break-word;
 }
 .style-display {
 	border-radius: 50%;
